fix(amout table): make collapse more clear

--- a/app/assets/stylesheets/amounttable.css.less
+++ b/app/assets/stylesheets/amounttable.css.less
@@ -14,8 +14,7 @@
 /* Show 10 more row */
 
 .collapse-row td {
-    &:hover,
-    &:focus {
+    &:hover {
         background: @grey-100;
     }
     text-align: center;
